# aws-env-management

./: LICENSE  README.md  statemachine.json
service/handlers/: lambda_handler.py
service/handlers/create_batch/: pyproject.toml
service/handlers/create_batch/src/: lambda_handler.py
service/handlers/create_batch/src/schemas/: env_vars.py  inputs.py
service/handlers/env_management/: pyproject.toml
service/handlers/env_management/src/: lambda_handler.py
service/handlers/env_management/src/modules/: __init__.py  env_file_module.py  messages_module.py  prefixes_module.py
service/handlers/env_management/src/schemas/: __init__.py  env_vars.py  inputs.py
service/handlers/modules/: env_file_module.py  messages_module.py  parameter_module.py  prefixes_module.py
service/handlers/utils/: __init__.py  env_vars_parser.py  observability.py
service/handlers/zip_stream/: package-lock.json  package.json  tsconfig.json  zipstream.js
service/handlers/zip_stream/src/: DestinationUris.ts  ZipStreamFiles.ts  index.ts  zipstream.ts
