[tool.poetry]
name = "create-batch_aws-env-management"
version = "0.1.0"
description = ""
authors = ["Shane E Bryan <shane.bryan@billowsc3.com>"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "parameter_create"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.15.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
